test: refatora setup com @BeforeEach e adiciona teste de mutação para adicionais em GetOrderByTable